# master-certifier

./: Dockerfile  Dockerfile.prod  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  package-lock.json  package.json  pyproject.toml  serverless.yaml  test.py
article/: README.md
compose/: nginx.conf  start-dev.sh  start-prod.sh
config/: environment.yml  functions.yml  iam.yml  layers.yml  resources.yml
src/: config.py  fastapi_app.py  handler.py
src/certificates/application/: detailer.py  generator.py  presenters.py
src/certificates/domain/: exceptions.py
src/certificates/domain/models/: certificate.py  coordinate.py  metadata.py  replacement.py  replacement_collection.py  replacement_item.py  template.py
src/certificates/domain/repositories/: certificate.py  coordinate.py  replacement.py  template.py
src/certificates/infrastructure/repositories/: dynamo_certificate.py  dynamo_coordinate.py  dynamo_replacement.py  dynamo_template.py
src/common/: environment.py
src/common/application/: s3_nucket.py
src/common/domain/interfaces/: bucket.py  filebucket.py
src/common/infrastructure/: dynamo_db.py  s3.py  s3_bucket.py
src/routers/: health_check_api.py
