[tool.poetry]
name = "skills-certifier"
version = "0.0.1"
description = " in AWS."
authors = ["Victor Aguilar <vicobits@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.0"
mangum = "^0.17.0"
boto3 = "^1.34.56"
boto3-stubs = {extras = ["essential"], version = "^1.34.56"}
pypdf2 = "^3.0.1"
reportlab = "^4.1.0"
ipdb = "^0.13.13"

[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
